# polymarket

./: .env.example  .gitignore  Cargo.toml  README.md  test.json  test_log.txt
src/: app.old.rs  app.rs  cli.rs  config.rs  data.rs  lib.rs  main.rs  ui.rs  utils.rs
src/app/: core.rs  input.rs  mod.rs  navigation.rs  price_history.rs  search.rs  stats.rs  strategies.rs  types.rs  websocket.rs
src/bot/: engine.rs  mod.rs  orderbooks.rs  strategy.rs
src/ui/: charts.rs  components.rs  layout.rs  mod.rs  orderbook.rs  selectors.rs  strategies.rs
src/websocket/: bitcoin.rs  clob.rs  crypto.rs  mod.rs
