[package]
name = "polymarket"
version = "0.1.0"
edition = "2024"

[dependencies]
polymarket-rs-client = { path = "./external/polymarket-rs-client" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = "1.37.2"
ratatui = "0.29.0"                                                                                                                                
dotenv = "0.15.0"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
cli-log = "2.1.0"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3.31"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }    
